<resources>
    <string name="app_name">Invoice Maker - Quick &amp; Easy</string>
    <string name="arrow_icon_to_show_that_you_are_going_to_a_new_page">Arrow icon to show that you are going to a new page</string>
    <string name="main_activity_bottombar_invoices">Invoices</string>
    <string name="main_activity_bottombar_articles">Articles</string>
    <string name="main_activity_bottombar_customers">Customers</string>
    <string name="main_activity_bottombar_settings">Settings</string>
    <string name="fragment_quotations_title">Quotations</string>
    <string name="fragment_customers_title">Customers</string>
    <string name="fragment_invoices_title">Invoices</string>
    <string name="fragment_articles_title">Articles</string>
    <string name="fragment_settings_title">Settings</string>
    <string name="fragment_settings_invoices_settings">Invoices Settings</string>
    <string name="fragment_settings_subscriptions">Premium</string>
    <string name="fragment_settings_write_us">Write us</string>
    <string name="fragment_settings_rate_us">Rate us</string>
    <string name="fragment_settings_invoices_settings_icon_description">Invoices settings icon</string>
    <string name="fragment_settings_subscriptions_icon_description">Subscriptions icon</string>
    <string name="fragment_settings_write_us_icon_description">Write us icon description</string>
    <string name="fragment_settings_rate_us_icon_description">Rate us icon</string>
    <string name="fragment_settings_company_logo_image_description">Company logo image</string>
    <string name="fragment_settings_mobile_number_icon">Mobile number icon</string>
    <string name="fragment_settings_email_icon_description">Email icon</string>
    <string name="fragment_company_settings_title">Company Details</string>
    <string name="fragment_default_notes_title">Default Notes</string>
    <string name="fragment_payment_settings_title">Payment Details</string>
    <string name="fragment_regional_settings_title">Region</string>
    <string name="fragment_taxes_settings_title">Taxes</string>
    <string name="fragment_invoice_number_title">Invoice Code</string>
    <string name="fragment_logo_and_signature_title">Logo And Signature</string>
    <string name="fragment_discount_settings_title">Discount</string>
    <string name="back_button_icon_description">Back button icon</string>
    <string name="fragment_regional_settings_currency">Currency</string>
    <string name="fragment_regional_settings_date_format">Date format</string>
    <string name="fragment_payment_details_paypal_email">PayPal email</string>
    <string name="fragment_payment_details_check_holder">Holder</string>
    <string name="fragment_payment_details_bank_details">Bank transfer details</string>
    <string name="fragment_taxes_tax_label">Tax label</string>
    <string name="fragment_taxes_tax_percentage">Tax %</string>
    <string name="validation_invalid_email_address">Invalid email address</string>
    <string name="fragment_default_notes_invoices">Invoices</string>
    <string name="fragment_invoice_number_starting_number">Current starting number</string>
    <string name="fragment_invoice_number_invoice_prefix_code">Prefix code</string>
    <string name="fragment_company_details_company_name">Name</string>
    <string name="fragment_company_details_company_holder_name">Holder</string>
    <string name="fragment_company_details_vat_number">VAT number</string>
    <string name="fragment_company_details_phone_number_1">Phone 1</string>
    <string name="fragment_company_details_phone_number_2">Phone 2</string>
    <string name="fragment_company_details_email_address_1">Email</string>
    <string name="fragment_company_details_website_url">Website URL</string>
    <string name="generic_error_save">An error occurred while saving</string>
    <string name="generic_error_rendering">An error occurred while rendering invoice. Probably Google broke again its WebView!</string>
    <string name="generic_error_load">An error occurred while loading data</string>
    <string name="playstore_error">An error occurred while connecting to Play Store. Please, try again later.</string>
    <string name="generic_error">An error occurred. Our developers will fix it soon!</string>
    <string name="fragment_logo_and_signature_company_logo">Company Logo</string>
    <string name="fragment_logo_and_signature_signature">Signature</string>
    <string name="fragment_logo_and_signature_the_signature_signature_image_description">The signature to be shown on invoices</string>
    <string name="fragment_logo_and_signature_the_signature_logo_image_description">The company logo to be shown on invoices</string>
    <string name="select_image_intent_message">Select an image</string>
    <string name="activity_invoice_detail_new_title">New Invoice</string>
    <string name="activity_invoice_detail_edit_title">Invoice</string>
    <string name="fragment_invoice_detail_payment">Payment</string>
    <string name="fragment_invoice_detail_articles">Articles Summary</string>
    <string name="fragment_invoice_detail_header">Header</string>
    <string name="fragment_invoice_detail_footer">Footer</string>
    <string name="total_without_taxes">Total without taxes:</string>
    <string name="share">Share</string>
    <string name="preview_and_share">Preview and Share</string>
    <string name="delete">Delete</string>
    <string name="invoice_creation_date">Creation date:</string>
    <string name="invoice_creation_date_no_semicolon">Creation date</string>
    <string name="paid">Paid</string>
    <string name="expired">Expired</string>
    <string name="totals">Totals</string>
    <string name="partial">Partial</string>
    <string name="total">Total</string>
    <string name="discount_amount">Discount (%.2f%%)</string>
    <string name="tax_amount">(%s %.2f%%)</string>
    <string name="fragment_invoice_detail_customer">Customer:</string>
    <string name="show_customer_name">Show customer name</string>
    <string name="show_invoice_code">Show invoice code</string>
    <string name="show_invoice_creation_date">Show invoice creation date</string>
    <string name="show_invoice_expiration_date">Show invoice expiration date</string>
    <string name="invoice_expiration_date">Expiration date</string>
    <string name="show_your_company_details">Show your company details</string>
    <string name="show_your_company_logo">Show your company logo</string>
    <string name="fragment_invoice_detail_add_some_articles">Add some articles to see the totals</string>
    <string name="your_signature">Show your signature</string>
    <string name="apply_taxes">Apply taxes</string>
    <string name="show_paypal_email">Show PayPal email</string>
    <string name="show_bank_transfer_details">Show bank transfer details</string>
    <string name="show_payment_notes">Show payment notes</string>
    <string name="signature">Signature</string>
    <string name="notes">Notes</string>
    <string name="show_notes">Show notes</string>
    <string name="show_invoice_notes">Show invoice notes</string>
    <string name="company_details">Company details</string>
    <string name="invoice">Invoice</string>
    <string name="invoices">Invoices</string>
    <string name="customer">Customer</string>
    <string name="taxes">Taxes</string>
    <string name="paypal">PayPal</string>
    <string name="dates">Dates</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="payment_notes">Payment notes</string>
    <string name="your_are_premium">"You are premium!\nThanks a lot!"</string>
    <string name="company_address">Company address</string>
    <string name="company_contacts">Company contacts</string>
    <string name="company_logo">Company logo</string>
    <string name="discount">Discount</string>
    <string name="apply_discount">Apply discount</string>
    <string name="discount_percentage">Discount %</string>
    <string name="invoice_code">Invoice code</string>
    <string name="example_code">Example code</string>
    <string name="cancel">Cancel</string>
    <string name="print">Print</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="customer_name">Customer name</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="phone_number">Phone Number</string>
    <string name="details">Details</string>
    <string name="article">Article</string>
    <string name="invoice_article">Invoice Article</string>
    <string name="new_customer">New Customer</string>
    <string name="new_article">New Article</string>
    <string name="new_article_for_invoice">New Invoice Article</string>
    <string name="customer_detail">Customer Detail</string>
    <string name="article_detail">Article Detail</string>
    <string name="quantity">Quantity</string>
    <string name="company_name">Company name</string>
    <string name="invoice_templates">Invoice Templates</string>
    <string name="invoice_layout">Invoice Layout</string>
    <string name="layout_color">Layout Color</string>
    <string name="preview">Preview</string>
    <string name="invoice_preview">Invoice Preview</string>
    <string name="template">Template</string>
    <string name="articles">Articles</string>
    <string name="thanks_for_purchase">Thanks for you purchase!</string>
    <string name="import_from_contacts">Import from contacts</string>
    <string name="company_name_onboarding_hint">Company name…</string>
    <string name="onboarding_company_name_description">You company name will be shown to your customers on the \'Billed by\' invoice section.</string>
    <string name="company_name_onboarding_title">Company Name</string>
    <string name="company_details_onboarding_title">Company Details</string>
    <string name="company_details_holder_onboarding_hint">Holder Name</string>
    <string name="company_details_email_onboarding_hint">Email</string>
    <string name="company_details_phone_onboarding_hint">Phone</string>
    <string name="onboarding_company_details_description">Other company details that will be shown to your customers on the \'Billed by\' invoice section.</string>
    <string name="next">Next</string>
    <string name="paypal_account">PayPal Account</string>
    <string name="you_paypal_account_will_be_shown_to_your_customers_on_the_payment_invoice_section">You PayPal account will be shown to your customers on the \'Payment\' invoice section.</string>
    <string name="paypal_account_onboarding_hint">PayPal account…</string>
    <string name="back">Back</string>
    <string name="skip">Skip</string>
    <string name="payment_section">Payment section</string>
    <string name="onboarding_payments_title">Set your main payment method, it will be shown on the invoices. You can set the other methods later from the \'Settings\' section.</string>
    <string name="welcome_to">Welcome to</string>
    <string name="app_name_for_homeboarding">Invoices Maker</string>
    <string name="simple_easy_to_use_and_powerful_invoicing_app">Simple, easy to use and powerful invoicing app.</string>
    <string name="bank_account">Bank Account</string>
    <string name="you_bank_account_will_be_shown_to_your_customers_on_the_payment_invoice_section">You bank account will be shown to your customers on the \'Payment\' invoice section.</string>
    <string name="holder_name_for_homeboarding_hint">Holder name…</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="show_cash_payment_method">Show cash payment method</string>
    <string name="show_credit_card_payment_method">Show credit card payment method</string>
    <string name="show_debit_card_payment_method">Show debit card payment method</string>
</resources>