<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuFragmentInvoices"
        android:enabled="true"
        android:icon="@drawable/ic_invoice"
        android:title="@string/main_activity_bottombar_invoices" />

    <!--    <item-->
    <!--        android:id="@+id/menuFragmentQuotations"-->
    <!--        android:enabled="true"-->
    <!--        android:icon="@drawable/ic_baseline_low_priority_24"-->
    <!--        android:title="@string/main_activity_bottombar_quotations" />-->

    <item
        android:id="@+id/menuFragmentCustomers"
        android:enabled="true"
        android:icon="@drawable/ic_customers"
        android:title="@string/main_activity_bottombar_customers" />

    <item
        android:id="@+id/menuFragmentProducts"
        android:enabled="true"
        android:icon="@drawable/ic_box"
        android:title="@string/main_activity_bottombar_articles" />

    <item
        android:id="@+id/menuFragmentSettings"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/main_activity_bottombar_settings" />

</menu>